--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <main>
         <h1>Freelancer Forum</h1>
-        <h2>The average starting price is $30</h2>
+        <h2>
+            See the footer for average freelancer costs
+        </h2>
         <!-- <table>
             <tr>
               <td colspan="3"><strong>Available Freelancers</strong></td>
