--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </h2>
         <!-- <table>
             <tr>
-              <td colspan="3"><strong>Available Freelancers</strong></td>
+              <td colspan="3">Available Freelancers</strong></td>
             </tr>
             <tr>
               <th>Name</th>
